@@ -152,7 +152,7 @@ from matplotlib.backend_bases import RendererBase, GraphicsContextBase,\
      cursors
 from matplotlib._pylab_helpers import Gcf
 from matplotlib.artist import Artist
-from matplotlib.cbook import exception_to_str
+from matplotlib.cbook import exception_to_str, is_string_like
 from matplotlib.figure import Figure
 from matplotlib.text import _process_text_args, Text
 from matplotlib.widgets import SubplotTool
@@ -1030,12 +1030,17 @@ The current aspect ration will be kept."""
 
         # Now that we have rendered into the bitmap, save it
         # to the appropriate file type and clean up
-        if not self.bitmap.SaveFile(filename, filetype):
-            DEBUG_MSG('print_figure() file save error', 4, self)
-            # note the error must be displayed here because trapping
-            # the error on a call or print_figure may not work because
-            # printing can be qued and called from realize
-            raise RuntimeError('Could not save figure to %s\n' % (filename))
+        if is_string_like(filename):
+            if not self.bitmap.SaveFile(filename, filetype):
+                DEBUG_MSG('print_figure() file save error', 4, self)
+                # note the error must be displayed here because trapping
+                # the error on a call or print_figure may not work because
+                # printing can be qued and called from realize
+                raise RuntimeError('Could not save figure to %s\n' % (filename))
+        elif hasattr(filename, 'write') and callable(filename.write):
+            if not self.bitmap.ConvertToImage().SaveStream(filename, filetype):
+                DEBUG_MSG('print_figure() file save error', 4, self)
+                raise RuntimeError('Could not save figure to %s\n' % (filename))
 
         # Restore everything to normal
         self.bitmap = origBitmap
